Se actualiza título de notebooks

--- a/notebooks/intro_python_numerico.ipynb
+++ b/notebooks/intro_python_numerico.ipynb
@@ -67,10 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6ad6b1d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'> <class 'float'> <class 'complex'>\n",
+      "Potencia: 8\n",
+      "División entera: 3\n",
+      "Resto: 1\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "entero = 7            # int\n",
@@ -98,10 +109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0b6aa52a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola Rodrigo\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "nombre = input(\"¿Cuál es tu nombre? \")\n",
@@ -129,10 +148,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9b0dfe5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x es positivo\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "x = 10\n",
