--- a/notebooks/matplotlib_graficos_intro.ipynb
+++ b/notebooks/matplotlib_graficos_intro.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# 📊 Creación de Gráficos con Matplotlib  \n",
+    "# Creación de Gráficos con Matplotlib  \n",
     "**Curso:** Programación Numérica  \n",
     "**Objetivo:** Aprender a crear gráficos personalizados en Python usando `matplotlib`.\n",
     "\n",
@@ -202,7 +202,11 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
