--- a/notebooks/numpy_arrays_intro.ipynb
+++ b/notebooks/numpy_arrays_intro.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# 📓 Manipulación de Arreglos con NumPy  \n",
+    "# Manipulación de Arreglos con NumPy  \n",
     "**Curso:** Programación Numérica  \n",
     "**Objetivo:** Aprender a crear, modificar y consultar datos en arreglos NumPy.\n",
     "\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f86eb759",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
