cambios menores en los notebooks

--- a/notebooks/intro_python_numerico.ipynb
+++ b/notebooks/intro_python_numerico.ipynb
@@ -182,10 +182,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6757e11e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "Contador: 0\n",
+      "Contador: 1\n",
+      "Contador: 2\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# For (en MATLAB: for i=1:5 ... end)\n",
@@ -288,6 +303,17 @@
     "1. Pida al usuario el radio de un círculo.  \n",
     "2. Calcule su área y perímetro usando `math.pi`.  \n",
     "3. Muestre los resultados con 2 decimales.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11a8a92b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escriba su código aquí\n",
+    "\n"
    ]
   },
   {
