--- a/notebooks/2_intro_numpy_arrays.ipynb
+++ b/notebooks/2_intro_numpy_arrays.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "f86eb759",
    "metadata": {},
    "outputs": [
@@ -41,6 +41,7 @@
      "text": [
       "[1 2 3 4 5 6]\n",
       "6\n",
+      "1\n",
       "[10  2  3  4  5  6]\n"
      ]
     }
@@ -55,6 +56,8 @@
     "\n",
     "# Imprimir el último elemento\n",
     "print(a[-1])\n",
+    "\n",
+    "print(a[0])\n",
     "\n",
     "# Modificar un elemento (los arrays son mutables)\n",
     "a[0] = 10\n",
@@ -74,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "0b5fde15",
    "metadata": {},
    "outputs": [
@@ -82,12 +85,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10  2  3]\n",
-      "[10  2  3 40  5  6]\n"
+      "[10  2  3  4  5  6]\n",
+      "[10  2  3]\n"
      ]
     }
    ],
    "source": [
+    "print(a)\n",
     "\n",
     "# Tomamos los primeros 3 elementos (esto es una vista, no una copia)\n",
     "print(a[:3])\n",
@@ -99,7 +103,7 @@
     "b[0] = 40\n",
     "\n",
     "# El array original también se ve modificado\n",
-    "print(a)\n"
+    "#print(a)\n"
    ]
   },
   {
