--- a/notebooks/2_intro_numpy_arrays.ipynb
+++ b/notebooks/2_intro_numpy_arrays.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "f86eb759",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "0b5fde15",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,8 @@
      "output_type": "stream",
      "text": [
       "[10  2  3  4  5  6]\n",
-      "[10  2  3]\n"
+      "[10  2  3]\n",
+      "[10  2  3 40  5  6]\n"
      ]
     }
    ],
@@ -103,7 +104,7 @@
     "b[0] = 40\n",
     "\n",
     "# El array original también se ve modificado\n",
-    "#print(a)\n"
+    "print(a)\n"
    ]
   },
   {
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5466a83e",
    "metadata": {},
    "outputs": [
@@ -166,6 +167,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0. 0. 0.]\n",
+      "[0 0 0]\n",
+      "[2 4 6 8]\n",
       "[ 0.          1.11111111  2.22222222  3.33333333  4.44444444  5.55555556\n",
       "  6.66666667  7.77777778  8.88888889 10.        ]\n"
      ]
@@ -185,7 +189,14 @@
     "# Valores espaciados linealmente\n",
     "f = np.linspace(0, 10, 10)\n",
     "\n",
-    "print(f)\n"
+    "print(c)\n",
+    "\n",
+    "print(d)\n",
+    "\n",
+    "print(e)\n",
+    "\n",
+    "print(f)\n",
+    "\n"
    ]
   },
   {
@@ -200,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2a2229c1",
    "metadata": {},
    "outputs": [
