Fix LaTeX formatting in differential equation representation

--- a/notebooks/solucion_ec_diferenciales.ipynb
+++ b/notebooks/solucion_ec_diferenciales.ipynb
@@ -14,7 +14,7 @@
     "Todos los métodos se aplicarán para resolver la siguiente ecuación diferencial:\n",
     "\n",
     "$$\n",
-    "\\frac{{dy}}{{dx}} = -2x^3 + 12x^2 - 20x + 8.5\n",
+    "\\frac{dy}{dx} = -2x^3 + 12x^2 - 20x + 8.5\n",
     "$$\n",
     "\n",
     "Además, se compararán los resultados numéricos con la solución exacta:\n",
